[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/cards/amaru1.png" type="Texture" id=2]
[ext_resource path="res://scripts/quiz.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.898039, 0.760784, 0.14902, 1, 0.898039, 0.760784, 0.14902, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Quiz" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 45.0
margin_top = 50.0
margin_right = 495.0
margin_bottom = 910.0
rect_min_size = Vector2( 450, 860 )

[node name="Vbox" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -383.5
margin_bottom = 383.5
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Vbox" type="VBoxContainer" parent="CenterContainer/Panel/Vbox"]
margin_right = 450.0
margin_bottom = 323.0

[node name="Label" type="Label" parent="CenterContainer/Panel/Vbox/Vbox"]
margin_right = 450.0
margin_bottom = 69.0
size_flags_vertical = 0
text = "Quem Ã©?"
align = 1

[node name="Picture" type="TextureRect" parent="CenterContainer/Panel/Vbox/Vbox"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 73.0
margin_right = 350.0
margin_bottom = 323.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/Vbox"]
margin_top = 327.0
margin_right = 450.0
margin_bottom = 767.0
size_flags_horizontal = 7
size_flags_vertical = 8
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_right = 450.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Option1" type="Button" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 24.0
margin_right = 450.0
margin_bottom = 85.0
rect_min_size = Vector2( 140, 0 )
text = "Amaru"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 89.0
margin_right = 450.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 30 )

[node name="Option2" type="Button" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 123.0
margin_right = 450.0
margin_bottom = 184.0
rect_min_size = Vector2( 140, 0 )
text = "Ghali"

[node name="MarginContainer4" type="MarginContainer" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 188.0
margin_right = 450.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 30 )

[node name="Option3" type="Button" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 222.0
margin_right = 450.0
margin_bottom = 283.0
rect_min_size = Vector2( 140, 0 )
text = "Chili"

[node name="MarginContainer5" type="MarginContainer" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 287.0
margin_right = 450.0
margin_bottom = 317.0
rect_min_size = Vector2( 0, 30 )

[node name="Option4" type="Button" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 321.0
margin_right = 450.0
margin_bottom = 382.0
rect_min_size = Vector2( 140, 0 )
text = "Naru"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 386.0
margin_right = 450.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 30 )

[node name="ProgressBar" type="TextureProgress" parent="CenterContainer/Panel/Vbox/VBoxContainer"]
margin_top = 420.0
margin_right = 450.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 20 )
max_value = 10.0
step = 0.01
value = 10.0
texture_progress = SubResource( 2 )
nine_patch_stretch = true

[node name="Border" type="ColorRect" parent="CenterContainer/Panel/Vbox/VBoxContainer/ProgressBar"]
self_modulate = Color( 1, 1, 1, 0.647059 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="CenterContainer/Panel/Vbox/VBoxContainer/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/Vbox/VBoxContainer/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/Vbox/VBoxContainer/Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/Vbox/VBoxContainer/Option4" to="." method="_on_Option4_pressed"]
